AC_PREREQ(2.69)
AC_INIT([FoxFlss], [1.0.13], [slark_xiao@163.com], [FoxFlss])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_LN_S

AC_PREFIX_DEFAULT([/usr])

AC_CONFIG_FILES([
Makefile
FoxFlss/Makefile
FoxFlss/bin/Makefile
FoxFlss/data/Makefile
])
AC_OUTPUT

echo "
==============================================
System paths:
	prefix:                  ${prefix}
	libdir:                  ${libdir}"
echo ""
